Java 12 Support
Signed-off-by: Alisson Oliveira <joe.alisson@gmail.com>