@@ -5,7 +5,7 @@ title L2 Classic: Saviors (Zaken) (Game Server)
 echo Starting GameServer.
 echo.
 
-java -Dfile.encoding=UTF-8 -Xms512m -Xmx2g -p ./lib -cp config;./lib/* -m org.l2j.gameserver/org.l2j.gameserver.GameServer
+java -Dfile.encoding=UTF-8 -Xms512m -Xmx2g -p ./lib -cp config;./lib/* -m org.l2j.gameserver/org.l2j.gameserver.GameServer --enable-preview
 
 if ERRORLEVEL 2 goto restart
 if ERRORLEVEL 1 goto error
