@@ -5,7 +5,7 @@ plugins {
     id "net.nemerosa.versioning" version "2.8.2"
 }
 
-version '1.0.0'
+version '1.1.0'
 ext.revision = versioning.info.build
 ext.buildJDK = "${System.properties['java.version']} (${System.properties['java.vendor']} ${System.properties['java.vm.version']})".toString()
 
@@ -24,8 +24,9 @@ subprojects {
         }
     }
 
-    sourceCompatibility = JavaVersion.VERSION_11
-    version = '1.0.0'
+    sourceCompatibility = JavaVersion.VERSION_12
+    targetCompatibility = JavaVersion.VERSION_12
+    version = '1.1.0'
 
     afterEvaluate {
         compileJava {
@@ -33,7 +34,7 @@ subprojects {
             doFirst {
                 options.compilerArgs = [
                     '--module-path', classpath.asPath,
-                    '-parameters'
+                    '-parameters', '--enable-preview'
                 ]
                 options.compilerArgs << "-Xlint:unchecked" << "-Xlint:deprecation"
                 classpath = files()
